src/blocks/menu/menu-item/styles/editor.scss
.wp-block-coblocks-menu-item {
	display: block;
	flex: 1 100%;
	margin-bottom: 0 !important;
	padding: 0 !important;

	.editor-media-placeholder {
		margin: 0 0 1.65em;
		min-height: 264px;
		outline: 1px dashed $dark-gray-150;
		padding: 0;
		position: relative;

		&:hover {
			outline: 1px dashed $dark-gray-500;
		}

		.components-placeholder__label,
		.components-placeholder__instructions {
			display: none;
		}

		.components-placeholder__fieldset {
			.components-button {
				margin-bottom: 0 !important;
			}
		}

		.components-drop-zone {
			bottom: -1px;
			left: -1px;
			right: -1px;
			top: -1px;
		}
	}

	&__heading.block-editor-rich-text__editable {
		margin: 0 0 0.4em;
	}

	p.block-editor-rich-text__editable {
		margin: 0 0 0.6em;
	}
}

.is-style-list .wp-block-coblocks-menu-item {
	.editor-media-placeholder {
		height: 130px;
		min-height: 130px;
		position: relative;

		.dashicon {
			margin: 10px 0 0 0;
		}

		.components-placeholder__label {
			display: block;
		}

		// Hide the Upload button.
		.components-form-file-upload .editor-media-placeholder__button {
			display: none;
		}

		// Restyle the Media Gallery button to be overlaid over the component.
		&__button {
			background: transparent !important;
			border: 0;
			bottom: 0;
			box-shadow: none !important;
			height: 100%;
			left: 0;
			position: absolute;
			right: 0;
			text-indent: -999em;
			top: 0;
			width: 100%;
		}
	}
}

.wp-block[data-type="coblocks/menu-item"] {
	flex: 1 50%;
	margin-left: 5px;
	margin-right: 5px;
	max-width: calc(50% - 10px) !important;
}

